2008-07-27  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* doc/manual/sigtran.texi: no invariant sections for debian
	* m4/.cvsignore: more libtool files to ignore

2008-07-23  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/sigtran.refs: update references

2008-07-11  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: documentation updates
	* NEWS: documentation updates
	* README: documentation updates
	* README-cvs: documentation updates
	* THANKS: documentation updates
	* doc/man/sigtran.macros: documentation updates
	* doc/projects/hlr_cost.tbl: documentation updates
	* doc/projects/hlr_gate0.tbl: documentation updates
	* doc/projects/hlr_gate1.tbl: documentation updates
	* doc/projects/hlr_gate2.tbl: documentation updates
	* doc/projects/hlr_gate3.tbl: documentation updates
	* doc/projects/hlr_gate4.tbl: documentation updates
	* doc/projects/hlr_gate5.tbl: documentation updates
	* doc/projects/hlr_gate6.tbl: documentation updates
	* doc/projects/hlr_sched.tbl: documentation updates
	* doc/projects/hlr_schest.tbl: documentation updates
	* doc/projects/hlr_traf.tbl: documentation updates
	* doc/projects/labmini.tbl: documentation updates
	* doc/projects/labnodes.tbl: documentation updates
	* doc/projects/labpref.tbl: documentation updates

2008-06-18  Brian Bidulock  <bidulock@openss7.org>

	* doc/drafts/fixup: more portable
	* doc/drafts/idrefs: update references
	* doc/man/sigtran.refs: update references

2008-05-05  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/m2ua.c: be strict with MORE_flag
	* src/drivers/ua.c: be strict with MORE_flag
	* src/modules/sdt_tpi.c: be strict with MORE_flag
	* src/modules/sl_tpi.c: be strict with MORE_flag

2008-05-04  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release